Change OPENAI_API_KEY to GOOGLE_API_KEY
Updated environment variable from OPENAI_API_KEY to GOOGLE_API_KEY for Gemini API usage.

--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,10 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    # 修正: --bind 0.0.0.0:10000 を追加して、外部接続を受け付けるように変更
     startCommand: gunicorn app:app --bind 0.0.0.0:10000 --timeout 120
     envVars:
-      - key: OPENAI_API_KEY
+      # 🔧 修正: Gemini APIを使用するため、GOOGLE_API_KEYに変更
+      - key: GOOGLE_API_KEY
         sync: false
       - key: PORT
         value: 10000
